# Keplerian_toolbox lib source files.
SET(dCGP_LIB_SRC_LIST
	${CMAKE_CURRENT_SOURCE_DIR}/dcgp.cpp
)

#Build Static Library
ADD_LIBRARY(dCGP_s STATIC ${dCGP_LIB_SRC_LIST})

#Build Dynamic Library (only if needed by PyKEP)
SET(LIB_INSTALL_PATH "lib")
ADD_LIBRARY(dCGP SHARED ${dCGP_LIB_SRC_LIST})
TARGET_LINK_LIBRARIES(dCGP ${LIBRARIES_4_DYNAMIC})
INSTALL(TARGETS dCGP
		RUNTIME DESTINATION ${LIB_INSTALL_PATH}
		LIBRARY DESTINATION ${LIB_INSTALL_PATH}
)



