MACRO(ADD_DCGP_TESTCASE arg1)
    ADD_EXECUTABLE(${arg1} ${arg1}.cpp)
    TARGET_LINK_LIBRARIES(${arg1} dcgp)
    target_compile_options(${arg1} PRIVATE "$<$<CONFIG:DEBUG>:${DCGP_CXX_FLAGS_DEBUG}>" "$<$<CONFIG:RELEASE>:${DCGP_CXX_FLAGS_RELEASE}>")
    set_property(TARGET ${arg1} PROPERTY CXX_STANDARD 17)
    set_property(TARGET ${arg1} PROPERTY CXX_STANDARD_REQUIRED YES)
    ADD_TEST(${arg1} ${arg1})
ENDMACRO(ADD_DCGP_TESTCASE)

ADD_DCGP_TESTCASE(expression)
ADD_DCGP_TESTCASE(differentiate)
ADD_DCGP_TESTCASE(expression_ann)
ADD_DCGP_TESTCASE(kernel)
ADD_DCGP_TESTCASE(function)
ADD_DCGP_TESTCASE(wrapped_functions)
ADD_DCGP_TESTCASE(rng)
ADD_DCGP_TESTCASE(gym)
ADD_DCGP_TESTCASE(symbolic_regression)
ADD_DCGP_TESTCASE(es4cgp)
ADD_DCGP_TESTCASE(mes4cgp)
ADD_DCGP_TESTCASE(momes4cgp)
ADD_DCGP_TESTCASE(gd4cgp)

